--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400&display=swap');
+
 body {
   background-color: rgba(128, 128, 128, 0.432);
-font-family: Arial, Helvetica, sans-serif;
+font-family:'Oswald' sans-serif;
 }
 
 nav ul li {
@@ -126,4 +128,58 @@ background-color: darkgreen;
 font-size: large;
 text-transform: capitalize;
 }
+*{
 
+  padding:0;
+  margin:0;
+  box-sizing:border-box;
+}
+.footre-container{
+  background-color: #212329;
+padding-bottom: 4rem;
+}
+.footer{
+width: 90%;
+  background-color: #212329;
+color: #fff;
+/* display: flex; */
+justify-content: center;
+flex-wrap: wrap;
+margin: 0 auto;
+overflow: hidden;
+margin-left: 5px;
+}
+.footer-header{
+/* display: flex; */
+flex-direction: column;
+margin-right: 4rem;
+width: 25%;
+float: left;
+
+}
+.footer-header h2{
+  margin-bottom: 2rem;
+  width: 33%;
+}
+.footer-header a{
+color:#fff;
+text-decoration: none;
+margin-bottom: 0.5rem;
+
+
+}
+.footer-header a:hover{
+
+  color: red;
+  transition:0.3s ease-out;
+}
+.footer{margin: 0 auto;
+
+}
+
+.footer-email-form{clear:both;
+padding:5px;
+}
+.large{padding: 3px;}
+.land{padding:2px;}
+ul li{list-style-type: none;}
